# driftless

./: .gitignore  Cargo.toml  README.md  README_PR27.md  WORKFLOW_FIX_SUMMARY.md  book.toml  index.html  test_disk_io.rs  test_error.rs
.devcontainer/: devcontainer.json
.github/: BRANCH_PROTECTION.md  PR_READY  dependabot.yml  repo-settings.yml
.github/workflows/: ci.yml  docs.yml  enforce-repo-settings.yml  index.html.template  mdbook-docs.yml  release.yml
api/: crates.js  help.html  settings.html  src-files.js
api/driftless/: all.html  enum.Commands.html  fn.find_apply_config_files.html  fn.find_facts_config_files.html  fn.find_logs_config_files.html  fn.is_collector_enabled.html  fn.is_output_enabled.html  fn.load_apply_config.html  fn.load_facts_config.html  fn.load_logs_config.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html
api/driftless/apply/: enum.TaskAction.html  fn.default_true.html  index.html  sidebar-items.js  static.TASK_REGISTRY.html  struct.ApplyConfig.html  struct.Task.html  struct.TaskRegistry.html  struct.TaskRegistryEntry.html  type.TaskExecutorFn.html  type.TaskValidatorFn.html
api/driftless/doc_extractor/: fn.add_common_facts_fields.html  fn.add_common_logs_fields.html  fn.add_common_task_fields.html  fn.extract_all_facts_docs.html  fn.extract_all_logs_docs.html  fn.extract_all_task_docs.html  fn.extract_examples_from_file.html  fn.extract_examples_from_files.html  fn.extract_facts_examples_from_files.html  fn.extract_facts_struct_docs.html  fn.extract_field_doc.html  fn.extract_field_name.html  fn.extract_field_type.html  fn.extract_logs_examples_from_files.html  fn.extract_logs_struct_docs.html  fn.extract_struct_fields.html  fn.extract_struct_name.html  fn.extract_task_struct_docs.html  fn.simplify_type_name.html  index.html  sidebar-items.js  struct.FieldDocumentation.html  struct.RegisterOutputDocumentation.html  struct.TaskDocumentation.html  struct.TaskExample.html
api/driftless/docs/: fn.categorize_task_type.html  fn.generate_apply_section.html  fn.generate_examples_section.html  fn.generate_facts_documentation.html  fn.generate_facts_section.html  fn.generate_filters_section.html  fn.generate_functions_section.html  fn.generate_logs_documentation.html  fn.generate_logs_section.html  fn.generate_task_documentation.html  fn.generate_template_documentation.html  fn.validate_apply_docs_completeness.html  fn.validate_facts_docs_completeness.html  fn.validate_logs_docs_completeness.html  index.html  sidebar-items.js
api/driftless/facts/: enum.Collector.html  enum.CommandOutputFormat.html  enum.FileFormat.html  fn.default_export_interval.html  fn.default_metrics_path.html  fn.default_poll_interval.html  fn.default_prometheus_host.html  fn.default_prometheus_port.html  fn.default_s3_prefix.html  fn.default_true.html  index.html  sidebar-items.js  static.FACTS_REGISTRY.html  struct.BaseCollector.html  struct.CommandCollector.html  (+24 more)
api/search.index/: 00a5c98a8902.js  0131e9f75948.js  015ddc7c99d7.js  01740d8ca69b.js  0178e0e0b639.js  01c6a55e4b77.js  037c62caf667.js  0532b737a03b.js  0547c211c1e3.js  059baf201252.js  059e92706620.js  0668f66b3034.js  068e5ee9bfb1.js  06f3a44f95cc.js  074ffdfa09d8.js  08235baf0f5a.js  0986b47b1bc2.js  09c740dafa47.js  0b64a41b1c37.js  0bd33ad306d3.js  0c6748b187bf.js  0d3cd9162f3d.js  0e6a5b07a8ce.js  1194f341e3e6.js  11cb31871884.js  1311df4297b8.js  1326d8c80d3d.js  133b3bd5947b.js  15dff8af1fc0.js  1644513563e5.js  16a351cf3218.js  16bd556fd76a.js  16e340fd75e4.js  17329afe3bea.js  17a6d87b8deb.js  1807b897ec8e.js  1894c67ee315.js  19518c9b1690.js  199dd6505003.js  19e7dd5cac15.js  (+152 more)
benches/: agent_benchmark.rs
book-src/: SUMMARY.md  api-docs.md
docs/: DESIGN.html  DESIGN.md  README.md  SUMMARY.md  agent-mode.md  apply-task-types.html  apply-task-types.md  facts-reference.html  facts-reference.md  index.md  introduction.md  logs-reference.html  logs-reference.md  operations.md  release-workflow.md  tasks-reference.html  tasks-reference.md  template-examples.html  template-examples.md  template-reference.html  template-reference.md
docs/api/: api-docs.md  index.md
docs/developer/: ai-contribution.md  design.md  development.md  index.md  plugins.md  podman-troubleshooting.md  release-workflow.md  repository-settings.md  rust-api.md
docs/developer/examples/plugins/rust-custom-task/: Cargo.toml  README.md
docs/developer/examples/plugins/rust-custom-task/src/: lib.rs
docs/developer/examples/plugins/rust-template-extension/: Cargo.toml  README.md
docs/developer/examples/plugins/rust-template-extension/src/: lib.rs
docs/examples/: agent-config-enforcement.yml  agent-log-aggregation.yml  agent-production.yml  facts-basic-monitoring.yml  index.md
docs/reference/: index.md  logs-reference.md  tasks-reference.md  template-reference.md
docs/user-guide/: DESIGN.md  deployment.md  index.md
scripts/: build-release-local.sh  check-docs.sh  generate-docs.sh  generate-summary.py  validate.sh
src/: agent.rs  config.rs  doc_extractor.rs  docs.rs  lib.rs  main.rs  plugin_interface.rs  plugins.rs
src/apply/: apt.rs  archive.rs  assert.rs  authorized_key.rs  blockinfile.rs  command.rs  copy.rs  cron.rs  debug.rs  directory.rs  executor.rs  fail.rs  fetch.rs  file.rs  filesystem.rs  firewalld.rs  gem.rs  get_url.rs  git.rs  group.rs  hostname.rs  include_role.rs  include_tasks.rs  iptables.rs  journald.rs  lineinfile.rs  logrotate.rs  mod.rs  mount.rs  npm.rs  package.rs  pacman.rs  pause.rs  pip.rs  raw.rs  reboot.rs  replace.rs  rsyslog.rs  script.rs  selinux.rs  (+18 more)
src/facts/: collector.rs  command_facts.rs  cpu_facts.rs  disk_facts.rs  memory_facts.rs  mod.rs  network_facts.rs  orchestrator.rs  process_facts.rs  system_facts.rs
src/logs/: console_log_output.rs  file_log_output.rs  file_log_source.rs  http_log_output.rs  log_filters.rs  log_parsers.rs  mod.rs  orchestrator.rs  plugin_log_output.rs  s3_log_output.rs  shipper.rs  syslog_log_output.rs
src/plugins/: registry.rs
tests/: agent_integration.rs  plugin_integration_tests.rs  plugin_security_tests.rs  plugin_unit_tests.rs
(+850 files in other folders)
