[package]
name = "driftless"
version = "0.1.0"
edition = "2021"
description = "Streamlined system configuration, inventory, and monitoring agent"
authors = ["Ross Peoples <ross.peoples@gmail.com>"]
license = "Apache-2.0"
keywords = ["config-management", "gitops", "monitoring", "agent"]
categories = ["command-line-utilities", "config"]

[build-dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"

[dependencies]
# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration file parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Directory handling
dirs = "5.0"

# Configuration management
git2 = "0.18"
nix = { version = "0.27", features = ["user", "fs"] }
reqwest = { version = "0.11", features = ["json"] }
rust-s3 = "0.33"

# Metrics gathering
prometheus = "0.13"
sysinfo = "0.30"

# Log collection
flate2 = "1.0"

# Secrets management (TODO: add appropriate crate)

# Shell-like parsing for commands
shlex = "1.0"

# Directory walking for recursive operations
walkdir = "2.0"

# Temporary files for testing
tempfile = "3.0"

# Regular expressions for template processing
regex = "1.0"

# Base64 encoding for HTTP basic auth
base64 = "0.21"

# Cryptographic hash functions for file checksums
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"

# Async traits for extensible task system
async-trait = "0.1"

# Lazy initialization for global registry
once_cell = "1.0"

# Documentation extraction
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
