[package]
name = "driftless"
version = "0.1.0"
edition = "2021"
description = "Streamlined system configuration, inventory, and monitoring agent"
authors = ["Ross Peoples <ross.peoples@gmail.com>"]
license = "Apache-2.0"
keywords = ["config-management", "gitops", "monitoring", "agent"]
categories = ["command-line-utilities", "config"]

[build-dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"

[dependencies]
# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration file parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Directory handling
dirs = "5.0"

# Configuration management
git2 = "0.18"
nix = { version = "0.31", features = ["user", "fs"] }
rust-s3 = "0.33"

# Log collection
flate2 = "1.0"

# Metrics gathering
hostname = "0.4.2"
prometheus = "0.14"
sysinfo = "0.30"

# HTTP server for metrics endpoint
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Secrets management (TODO: add appropriate crate)
# TODO: Add remote secrets providers (AWS, GCP, Vault/OpenBao, etc)

# File watching for configuration changes
notify = "6.1"

# Shell-like parsing for commands
shlex = "1.0"

# Directory walking for recursive operations
walkdir = "2.0"

# Temporary files for testing
tempfile = "3.0"

# Text processing and cryptography
regex = "1.0"
base64 = "0.21"
urlencoding = "2.1"
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
bcrypt = "0.18"

# Templating system
minijinja = { version = "2.14.0", features = ["debug"] }
rand = "0.9.2"

# Date/time and UUID handling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Async utilities
async-trait = "0.1"
once_cell = "1.0"

# WebAssembly runtime for plugins
wasmtime = "41.0"

# HTTP client for plugin registry
reqwest = { version = "0.13", features = ["json"] }
sha256 = "1.5"
users = "0.11.0"
futures-util = "0.3.31"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
tokio = { version = "1.0", features = ["process", "rt-multi-thread"] }
wat = "1.0"                                                            # For creating test WASM modules

[[test]]
name = "agent_integration"
path = "tests/agent_integration.rs"

[[test]]
name = "plugin_unit_tests"
path = "tests/plugin_unit_tests.rs"

[[test]]
name = "plugin_integration_tests"
path = "tests/plugin_integration_tests.rs"

[[test]]
name = "plugin_security_tests"
path = "tests/plugin_security_tests.rs"

[[bench]]
name = "agent_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-local]
inherits = "release"
lto = false
codegen-units = 8
