[package]
name = "driftless-template-extension-plugin"
version = "0.1.0"
edition = "2021"
description = "Example template extension plugin for Driftless"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
base64 = "0.21"

# For development, use local path to driftless plugin interface
driftless-plugin = { path = "../../../../../src/plugin_interface" }
